# urchinware-2

./: .gitignore  README.md  README.rst  brain.py  database.py  dorcas  getem.py  pip-packages.txt  project.env  pyproject.toml  run  speak
condition/: Condition.g4  ConditionLexer.interp  ConditionLexer.py  __init__.py  visitor.py
dorcas/: __init__.py  __main__.py  brain.py  condition.py  database.py  getem.py  sensation.py
dorcas/condition/: Condition.interp  Condition.tokens  ConditionLexer.py  ConditionParser.py  ConditionVisitor.py  Makefile  __init__.py  visitor.py
dorcas/responder/: __init__.py  doormonitor.py  greeter.py  instrumentation.py  muser.py  muteswitch.py  security.py  temperature.py  time.py
dorcas/sample/: db.xml
dorcas/sense/: __init__.py  door.py  journal.py  mqtt.py  time.py
dorcas/urge/: __init__.py  act.py  publish.py  say.py
dorcas/worker/: __init__.py  alien.py  audio.py  audioplayer.py  eyes.py  mqttclient.py  thespian.py  voice.py
responder/: doormonitor.py  greeter.py  muser.py  muteswitch.py  security.py  temperature.py  time.py
sample/: db.xml
sense/: __init__.py  door.py  journal.py  mqtt.py  time.py
systemd/: README.md  dorcas.service
urge/: __init__.py  say.py
util/: install.sh
worker/: __init__.py  eyes.py  mqttclient.py  voice.py
