[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dorcas"
authors = [{name = "Mouse", email = "mousefad@googlemail.com"}]
readme = "README.rst"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "arrow",
    "cachetools",
    "click",
    "coloredlogs",
    "gpiozero",
    "lgpio",
    "paho-mqtt",
    "singleton_decorator",
    "sqlalchemy",
]

[project.scripts]
dorcas = "dorcas.__main__:main"
getem = "dorcas.getem:main"

[project.urls]
Source = "https://github.com/mousefad/urchinware-2"
